@@ -1,4 +1,4 @@
 {
-    label: 'Europe (EU27)',
-    data: [[1999, 3.0], [2000, 3.9], [2001, 2.0], [2002, 1.2]]
+    "label": "Europe (EU27)",
+    "data": [[1999, 3.0], [2000, 3.9], [2001, 2.0], [2002, 1.2]]
 }
